vn: add new page for irc bot

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -44,7 +44,7 @@
       <ul>
         <li><a href="/">trang chủ</a></li>
         <li><a href="http://groups.google.com/group/archlinuxvn/">nhóm thư</a></li>
-        <li><a href="http://webchat.freenode.net/?randomnick=1&channels=archlinuxvn&prompt=1&uio=d4">irc#archlinuxvn</a></li>
+        <li><a href="http://webchat.freenode.net/?randomnick=1&channels=archlinuxvn&prompt=1&uio=d4">irc</a> (<a href="/vn/bot">src</a>)</li>
         <li><a href="http://github.com/archlinuxvn/">mã nguồn</a></li>
       </ul>
     </div>
