--- a/layouts/default.html
+++ b/layouts/default.html
@@ -16,15 +16,13 @@
       </p>
     </div>
     <div id="sidebar">
-      <h2>ArchLinuxVn</h2>
+      <h2><a href="/vn/about">ArchLinuxVn</a></h2>
       <ul>
-        <li><a href="/vn/about">giới thiệu</a></li>
         <li><a href="/vn/news">tin tức</a></li>
         <li><a href="/vn/members">thành viên</a></li>
       </ul>
-      <h2>Blog</h2>
+      <h2><a href="/blog/">Blog</a></h2>
       <ul>
-        <li><a href="/blog/">tất cả</a></li>
         <li><a href="/blog/~huy/">~huy</a>, <a href="/blog/~icy/">~icy</a></li>
       </ul>
       <h2>Tài liệu</h2>
