--- a/layouts/default.html
+++ b/layouts/default.html
@@ -35,7 +35,7 @@
       <ul>
         <li><a href="/">trang chủ</a></li>
         <li><a href="http://groups.google.com/group/archlinuxvn/">nhóm thư</a></li>
-        <li><a href="http://webchat.freenode.net/?randomnick=1&channels=archlinuxvn&prompt=1&uio=d4">irc</a> (<a href="/vn/bot">bot</a>, <a href="/irclogs/">log</a>)</li>
+        <li><a href="/vn/irc">irc</a> (<a href="/vn/bot">bot</a>, <a href="/irclogs/">log</a>)</li>
         <li><a href="http://github.com/archlinuxvn/">mã nguồn</a></li>
       </ul>
     </div>
