git/helper and layout: print more details about the article
the details are provided by executing external command. included:
- number of commits
- number of authors
- author/date of the last commit

we should provide a better way to handle git information. for example,
using a git client library. we also need to check if the current environment
has such library to fix the behavior of the helper

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -11,7 +11,9 @@
       <p>
         ----
         <br />
-        <em>last updated by <%= git(:author, @item) %> @ <%= git(:date, @item) %></em>
+        <em><%= git(:stat, @item) %>;</em>
+        <br />
+        <em><%= git(:last_update, @item) %></em>
       </p>
       <%= @item[:allow_comment] ? disqus_show : "" %>
     </div>
