--- a/layouts/default.html
+++ b/layouts/default.html
@@ -18,7 +18,7 @@
       <%= @item[:allow_comment] ? disqus_show : "" %>
     </div>
     <div id="sidebar">
-      <h2><a href="/vn/about">ArchLinuxVn</a></h2>
+      <h2><a href="/">ArchLinuxVn</a></h2>
       <ul>
         <li><a href="/vn/news">tin tức</a></li>
         <li><a href="/vn/members">thành viên</a></li>
