layout: new blogger redlotus

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -25,7 +25,11 @@
       </ul>
       <h2><a href="/blog/">Blog</a></h2>
       <ul>
-        <li><a href="/blog/~huy/">~huy</a>, <a href="/blog/~icy/">~icy</a></li>
+        <li>
+            <a href="/blog/~redlotus/">~redlotus</a>,
+            <a href="/blog/~huy/">~huy</a>,
+            <a href="/blog/~icy/">~icy</a>,
+            </li>
       </ul>
       <h2>Tài liệu</h2>
       <ul>
