--- a/layouts/default.html
+++ b/layouts/default.html
@@ -26,10 +26,12 @@
       <h2><a href="/blog/">Blog</a></h2>
       <ul>
         <li>
-            <a href="/blog/~redlotus/">~redlotus</a>,
+            <a href="/blog/~redlotus/">~redlotus</a>
+        </li>
+        <li>
             <a href="/blog/~huy/">~huy</a>,
-            <a href="/blog/~icy/">~icy</a>,
-            </li>
+            <a href="/blog/~icy/">~icy</a>
+        </li>
       </ul>
       <h2>Tài liệu</h2>
       <ul>
