--- a/layouts/default.html
+++ b/layouts/default.html
@@ -15,6 +15,14 @@
         <br />
         <em><%= git(:last_update, @item) %></em>
       </p>
+<pre class="license">
+This page is published under the license <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/">CC BY-NC-ND 3.0</a>.
+  (1) Attribution — You must attribute the work in the manner
+        specified by the author or licensor <em>(but not in any way
+        that suggests that they endorse you or your use of the work)</em>;
+  (2) Noncommercial — You may not use this work for commercial purposes;
+  (3) No Derivative Works — You may not alter, transform, or build upon this work.
+</pre>
       <%= @item[:allow_comment] ? disqus_show : "" %>
     </div>
     <div id="sidebar">
