layout: Add link to /doc/

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -41,7 +41,7 @@ This page is published under the license <a href="http://creativecommons.org/lic
             <a href="/blog/~icy/">~icy</a>
         </li>
       </ul>
-      <h2>Tài liệu</h2>
+      <h2><a href="/doc/">Tài liệu</a></h2>
       <ul>
         <li><a href="/faq">FAQ</a></li>
         <li><a href="/doc/newbie">cơ bản</a></li>
