--- a/layouts/default.html
+++ b/layouts/default.html
@@ -30,6 +30,7 @@ This page is published under the license <a href="http://creativecommons.org/lic
       <ul>
         <li><a href="/vn/news">tin tức</a></li>
         <li><a href="/vn/members">thành viên</a></li>
+        <li><a href="/changes">thay đổi gần đây</a></li>
       </ul>
       <h2><a href="/blog/">Blog</a></h2>
       <ul>
