layout: fix the title (syntax error)

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title><%= @item[:title] - ArchLinuxVn - ArchLinux for Vietnamese%></title>
+    <title><%= @item[:title]%> - ArchLinuxVn - ArchLinux for Vietnamese</title>
     <link rel="stylesheet" type="text/css" href="/style.css" media="screen">
   </head>
   <body>
