--- a/layouts/default.html
+++ b/layouts/default.html
@@ -21,9 +21,10 @@ This page is published under the license <a href="http://creativecommons.org/lic
     <div id="sidebar">
       <h2><a href="/">ArchLinuxVn</a></h2>
       <ul>
-        <li><a href="/vn/news">tin tức</a></li>
-        <li><a href="/vn/members">thành viên</a></li>
-        <li><a href="/changes">thay đổi gần đây</a></li>
+        <li><a href="/vn/news/">tin tức</a></li>
+        <li><a href="/vn/members/">thành viên</a></li>
+        <li><a href="/changes/">thay đổi gần đây</a></li>
+        <li><a href="/tags/">thẻ đánh dấu bài viết</a></li>
       </ul>
       <h2><a href="/blog/">Blog</a></h2>
       <ul>
@@ -38,13 +39,13 @@ This page is published under the license <a href="http://creativecommons.org/lic
       <h2><a href="/doc/">Tài liệu</a></h2>
       <ul>
         <li><a href="/faq">FAQ</a></li>
-        <li><a href="/doc/newbie">cơ bản</a></li>
-        <li><a href="/doc/oldbie">trung bình</a></li>
+        <li><a href="/doc/newbie/">cơ bản</a></li>
+        <li><a href="/doc/oldbie/">trung bình</a></li>
       </ul>
       <h2>Liên kết</h2>
       <ul>
+        <li><a href="/vn/irc/">irc</a> (<a href="/vn/bot">bot</a>, <a href="/irclogs/">log</a>)</li>
         <li><a href="http://groups.google.com/group/archlinuxvn/">nhóm thư</a></li>
-        <li><a href="/vn/irc">irc</a> (<a href="/vn/bot">bot</a>, <a href="/irclogs/">log</a>)</li>
         <li><a href="http://github.com/archlinuxvn/">mã nguồn</a></li>
       </ul>
     </div>
