--- a/layouts/default.html
+++ b/layouts/default.html
@@ -8,6 +8,15 @@
   <body>
     <div id="main">
       <%= yield %>
+      <% if not @item[:virtual] %>
+        <p>
+          ----
+          <br />
+          <em><%= git(:stat, @item) %>;</em>
+          <br />
+          <em><%= git(:last_update, @item) %></em>
+        </p>
+      <% end %>
 <pre class="license">
 This page is published under the license <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/">CC BY-NC-ND 3.0</a>.
   (1) Attribution — You must attribute the work in the manner
