--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -130,5 +130,15 @@ pre.license {
 blockquote {
   margin-left: 0.5em;
   padding-left: 1em;
-  border-left: 1px solid gray;
+  border-left: 1px solid #ccc;
+}
+
+table {
+  width: 100%;
+  border:1px solid #ccc;
+}
+
+td {
+  border-top: 1px solid #ccc;
+  padding: 2px;
 }
