--- a/layouts/default.html
+++ b/layouts/default.html
@@ -56,6 +56,7 @@ This page is published under the license <a href="http://creativecommons.org/lic
         <li><a href="/vn/irc/">irc</a> (<a href="/vn/bot">bot</a>, <a href="/irclogs/">log</a>)</li>
         <li><a href="http://groups.google.com/group/archlinuxvn/">nhóm thư</a></li>
         <li><a href="http://github.com/archlinuxvn/">mã nguồn</a></li>
+        <li><a href="http://stats.tuxfamily.org/archlinuxvn.tuxfamily.org/">thống kê</a></li>
       </ul>
     </div>
   </body>
