--- a/layouts/default.html
+++ b/layouts/default.html
@@ -48,14 +48,16 @@ This page is published under the license <a href="http://creativecommons.org/lic
       <h2><a href="/doc/">Tài liệu</a></h2>
       <ul>
         <li><a href="/faq">FAQ</a></li>
-        <li><a href="/doc/newbie/">cơ bản</a></li>
-        <li><a href="/doc/oldbie/">trung bình</a></li>
+        <li><a href="/doc/newbie/">cơ bản</a>
+          | <a href="/doc/oldbie/">trung bình</a></li>
       </ul>
       <h2>Liên kết</h2>
       <ul>
         <li><a href="/vn/irc/">irc</a> (<a href="/vn/bot">bot</a>, <a href="/irclogs/">log</a>)</li>
-        <li><a href="http://groups.google.com/group/archlinuxvn/">nhóm thư</a></li>
-        <li><a href="http://github.com/archlinuxvn/">mã nguồn</a></li>
+        <li><a href="http://groups.google.com/group/archlinuxvn/">nhóm thư</a>
+          | <a href="http://github.com/archlinuxvn/">mã nguồn</a></li>
+        <li><a href="https://facebook.com/archlinuxvn/">Facebook</a>
+          | <a href="https://twitter.com/archlinuxvn/">Twitter</a></li>
         <li><a href="http://stats.tuxfamily.org/archlinuxvn.tuxfamily.org/">thống kê</a></li>
       </ul>
     </div>
