--- a/layouts/default.html
+++ b/layouts/default.html
@@ -44,10 +44,13 @@ This page is published under the license <a href="http://creativecommons.org/lic
             <a href="/blog/~huy/">~huy</a>,
             <a href="/blog/~icy/">~icy</a>
         </li>
+        <li>
+            <a href="/blog/~n0b0dy/">~n0b0dy</a>,
+        </li>
       </ul>
       <h2><a href="/doc/">Tài liệu</a></h2>
       <ul>
-        <li><a href="/faq">FAQ</a></li>
+        <li><a href="/faq/">FAQ</a></li>
         <li><a href="/doc/newbie/">cơ bản</a></li>
         <li><a href="/doc/oldbie/">trung bình</a></li>
       </ul>
