do so stupid thing

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -45,7 +45,7 @@ This page is published under the license <a href="http://creativecommons.org/lic
             <a href="/blog/~icy/">~icy</a>
         </li>
         <li>
-            <a href="/blog/~n0b0dy/">~n0b0dy</a>,
+            <a href="/blog/~n0b0dy/">~n0b0dy</a>
         </li>
       </ul>
       <h2><a href="/doc/">Tài liệu</a></h2>
