layout: add new section :Search

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -63,6 +63,10 @@ This page is published under the license <a href="http://creativecommons.org/lic
           <a href="https://twitter.com/archlinuxvn/">Twitter</a></li>
         <li><a href="http://stats.tuxfamily.org/archlinuxvn.tuxfamily.org/">thống kê</a></li>
       </ul>
+      <h2>Tìm kiếm</h2>
+      <ul>
+        <li><a href="http://www.google.com.vn/?q=site:archlinuxvn.org+YOUR_TEXT">bằng Google</a></li>
+      </ul>
     </div>
   </body>
 </html>
