--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -111,10 +111,11 @@ a:hover {
 
 code {
   color: green;
+  font-family: monospace;
 }
 
 pre {
-  color: white;
+  color: green;
   background-color: black;
   padding: 1em;
   font-family: monospace;
