core: update links to lists

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -65,7 +65,7 @@ This page is published under the license <a href="http://creativecommons.org/lic
       <ul>
         <li><a href="/vn/irc/">irc</a> (<a href="/vn/bot/">bot</a>, <a href="/irclogs/">log</a>)</li>
         <li>
-          <a href="http://groups.google.com/group/archlinuxvn/">nhóm thư</a>,
+          <a href="/vn/lists/">nhóm thư</a>,
           <a href="http://github.com/archlinuxvn/">mã nguồn</a></li>
         <li>
           <a href="https://facebook.com/archlinuxvn/">Facebook</a>,
