core/layout: fiix typo

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -22,7 +22,7 @@
           <% unless @item[:origin] %>
             <p>
               <strong>Origin:</strong>
-                <a href="<%= @item[:origin]} %>"><%= @item[:origin] %></a>
+                <a href="<%= @item[:origin] %>"><%= @item[:origin] %></a>
             </p>
           <% end %>
       <% end %>
