--- a/layouts/default.html
+++ b/layouts/default.html
@@ -44,7 +44,7 @@
       <%= @item[:allow_comment] ? disqus_show : "" %>
     </div>
     <div id="sidebar">
-      <h2><a href="/">ArchLinuxVn</a></h2>
+      <h2><a href="/">ArchLinux @Vietnam</a></h2>
       <ul>
         <li><a href="/vn/news/">tin tức
               <%= item_news?(@item) ? " (mới)" : "" %>
@@ -68,18 +68,20 @@
         <li><a href="/doc/newbie/">cơ bản</a>,
           <a href="/doc/oldbie/">trung bình</a></li>
       </ul>
-      <h2>Liên kết</h2>
+      <h2>Liên kết. Liên hệ</h2>
       <ul>
-        <li><a href="/vn/irc/">irc</a> (<a href="/vn/bot/">bot</a>, <a href="/irclogs/"><s>log</s></a>)</li>
+        <li><a href="/vn/irc/">irc</a> (<a href="/vn/bot/">bot</a>,
+            <a href="/irclogs/"><s>log</s></a>)</li>
         <li><a href="/vn/lists/">nhóm thư</a>,
             <a href="http://github.com/archlinuxvn/">mã nguồn</a></li>
         <li><a href="https://facebook.com/archlinuxvn/">Facebook</a>,
             <a href="https://twitter.com/archlinuxvn/">Twitter</a></li>
-        <li><a href="http://stats.tuxfamily.org/archlinuxvn.tuxfamily.org/">thống kê</a></li>
+        <li>email: <strong>info</strong> @ <strong>thisdomain</strong></li>
       </ul>
-      <h2>Tìm kiếm</h2>
+      <h2>Linh tinh</h2>
       <ul>
-        <li><a href="http://www.google.com.vn/?q=site:archlinuxvn.org+YOUR_TEXT">bằng Google</a></li>
+        <li><a href="http://stats.tuxfamily.org/archlinuxvn.tuxfamily.org/">thống kê</a></li>
+        <li><a href="http://www.google.com.vn/?q=site:archlinuxvn.org+&nbsp;">tìm với Google</a></li>
       </ul>
     </div>
   </body>
