--- a/layouts/default.html
+++ b/layouts/default.html
@@ -46,9 +46,9 @@
     <div id="sidebar">
       <h2><a href="/">ArchLinux @Vietnam</a></h2>
       <ul>
-        <li><a href="/vn/news/">tin tức
-              <% item_news?("vn/news", 1000) ? " (mới)" : "" %>
-            </a></li>
+        <li><a href="/vn/news/">tin tức</a>
+              <%= item_news?("vn/news/", 1000) ? " (mới)" : "" %>
+          </li>
         <li><a href="/vn/members/">thành viên</a></li>
         <li><a href="/changes/">thay đổi gần đây</a></li>
         <li><a href="/tags/">thẻ đánh dấu bài viết</a></li>
