Fix top-level links for bloggesr

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -55,11 +55,11 @@
       </ul>
       <h2><a href="/blog/">Blog</a></h2>
       <ul>
-        <li><a href="/blog/~redlotus/">redlotus</a>,
-            <a href="/blog/~n0b0dy/">n0b0dy</a>
+        <li><a href="/~redlotus/">redlotus</a>,
+            <a href="/~n0b0dy/">n0b0dy</a>
         </li>
-        <li><a href="/blog/~huy/">huy</a>,
-            <a href="/blog/~icy/">icy</a>
+        <li><a href="/~huy/">huy</a>,
+            <a href="/~icy/">icy</a>
         </li>
       </ul>
       <h2><a href="/doc/">Tài liệu</a></h2>
