layout: + link to security

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -51,7 +51,8 @@
           </li>
         <li><a href="/vn/members/">thành viên</a></li>
         <li><a href="/changes/">thay đổi gần đây</a></li>
-        <li><a href="/tags/">thẻ đánh dấu bài viết</a></li>
+        <li></li>
+        <li><a href="/security/">!! Security !!</a></li>
       </ul>
       <h2><a href="/blog/">Blog</a></h2>
       <ul>
@@ -80,6 +81,7 @@
       </ul>
       <h2>Linh tinh</h2>
       <ul>
+        <li><a href="/tags/">thẻ đánh dấu bài viết</a></li>
         <li><a href="http://stats.tuxfamily.org/archlinuxvn.tuxfamily.org/">thống kê</a></li>
         <li><a href="http://www.google.com.vn/?q=site:archlinuxvn.org+&nbsp;">tìm với Google</a></li>
       </ul>
