--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
 
-  font-family: Georgia, Palatino, Times, 'Times New Roman', sans-serif;
+  font-family: Tahoma, 'Times New Roman', sans-serif;
 }
 
 body {
@@ -129,7 +129,7 @@ pre code {
 pre.license {
   color: gray;
   background-color: transparent;
-  font-size: 10px;
+  font-size: 11px;
   font-family: normal;
 }
 
