--- a/layouts/default.html
+++ b/layouts/default.html
@@ -47,19 +47,20 @@
       <h2><a href="/">ArchLinux @Vietnam</a></h2>
       <ul>
         <li><a href="/vn/news/">tin tức</a>
-              <%= item_news?("vn/news/", 1000) ? " (mới)" : "" %>
+              <%= item_news?("vn/news/", 14) ? " (mới)" : "" %>
           </li>
         <li><a href="/vn/members/">thành viên</a></li>
         <li><a href="/changes/">thay đổi gần đây</a></li>
-        <li><a href="/tags/">thẻ đánh dấu bài viết</a></li>
+        <li></li>
+        <li><a href="/security/">!! Security !!</a></li>
       </ul>
       <h2><a href="/blog/">Blog</a></h2>
       <ul>
-        <li><a href="/blog/~redlotus/">redlotus</a>,
-            <a href="/blog/~n0b0dy/">n0b0dy</a>
+        <li><a href="/~redlotus/">redlotus</a>,
+            <a href="/~n0b0dy/">n0b0dy</a>
         </li>
-        <li><a href="/blog/~huy/">huy</a>,
-            <a href="/blog/~icy/">icy</a>
+        <li><a href="/~huy/">huy</a>,
+            <a href="/~icy/">icy</a>
         </li>
       </ul>
       <h2><a href="/doc/">Tài liệu</a></h2>
@@ -80,6 +81,7 @@
       </ul>
       <h2>Linh tinh</h2>
       <ul>
+        <li><a href="/tags/">thẻ đánh dấu bài viết</a></li>
         <li><a href="http://stats.tuxfamily.org/archlinuxvn.tuxfamily.org/">thống kê</a></li>
         <li><a href="http://www.google.com.vn/?q=site:archlinuxvn.org+&nbsp;">tìm với Google</a></li>
       </ul>
