--- a/layouts/default.html
+++ b/layouts/default.html
@@ -71,8 +71,8 @@
       </ul>
       <h2>Liên kết. Liên hệ</h2>
       <ul>
-        <li><a href="/vn/irc/">irc</a> (<a href="/vn/bot/">bot</a>,
-            <a href="/irclogs/"><s>log</s></a>)</li>
+        <li><a href="/vn/irc/">irc</a> (<a href="/vn/bot/">bot</a>),
+            <a href="/vn/skype/"><s>skype</s></a></li>
         <li><a href="/vn/lists/">nhóm thư</a>,
             <a href="http://github.com/archlinuxvn/">mã nguồn</a></li>
         <li><a href="https://facebook.com/archlinuxvn/">Facebook</a>,
