layourt: Remove strike-out on :skype link

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -72,7 +72,7 @@
       <h2>Liên kết. Liên hệ</h2>
       <ul>
         <li><a href="/vn/irc/">irc</a> (<a href="/vn/bot/">bot</a>),
-            <a href="/vn/skype/"><s>skype</s></a></li>
+            <a href="/vn/skype/">skype</a></li>
         <li><a href="/vn/lists/">nhóm thư</a>,
             <a href="http://github.com/archlinuxvn/">mã nguồn</a></li>
         <li><a href="https://facebook.com/archlinuxvn/">Facebook</a>,
