--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -22,13 +22,37 @@ a:hover {
   color: #f90;
 }
 
-#main {
+#cssmenu {
+  display: block;
+  float: left;
   position: absolute;
+  top: 0px;
+  left: 0px;
+  padding: 0 0 0 0;
+  white-space: nowrap;
+}
+
+#main {
+  padding-top: 40px;
+  padding-left: 10px;
 
   top: 40px;
-  left: 280px;
+  left: 10px;
+}
 
-  width: 500px;
+/* For mobile users */
+@media screen and (max-device-width: 500px){
+  #main {
+    width: 100%;
+    padding-right: 0px;
+    padding-left: 0px;
+  }
+}
+
+@media screen and (min-device-width:501px){
+  #main {
+    width: 500px;
+  }
 }
 
 #main h1 {
@@ -178,4 +202,197 @@ table.CodeRay td.code {
   border: 0px solid gray;
   padding: 0px;
   margin: 0px;
+}
+
+@font-face {
+    font-family: "BlackChancery";
+    src: url(/black-chancery.ttf) format("truetype");
+}
+.blackchancery {
+    font-family: "BlackChancery", Verdana, Tahoma;
+}
+
+/* theslinux patches */
+
+h2, h3 {
+  color: #043C6B;
+}
+
+#sidebar h2 {
+
+}
+
+#sidebar a,
+#sidebar a:link,
+#sidebar a:visited {
+  text-decoration: none;
+  color: #043C6B;
+}
+
+#sidebar a:hover {
+  text-decoration: underline;
+  color: #6A0AAB;
+  background-color: #fff;
+}
+
+#markdown-toc a {
+  text-decoration: none;
+}
+
+#markdown-toc a:link,
+#markdown-toc a:visited {
+  color: #007929;
+}
+
+#markdown-toc a:hover {
+  text-decoration: none;
+  color: #fff;
+}
+
+hr {
+  height: 0px;
+  color: #ccc;
+  padding: 0px;
+  margin: 0px;
+}
+
+ul.pureCssMenu ul{display:none}
+ul.pureCssMenu li:hover>ul{display:block}
+ul.pureCssMenu ul{position: absolute;left:-1px;top:98%;}
+ul.pureCssMenu ul ul{position: absolute;left:98%;top:-2px;}
+ul.pureCssMenu,ul.pureCssMenu ul {
+  margin:0px;
+  list-style:none;
+  padding:0px 2px 2px 0px;
+  background-color:#FFFFFF;
+  background-repeat:repeat;
+  border-color:#AAAAAA;
+  border-width:1px;
+  border-style:solid;
+}
+ul.pureCssMenu table {border-collapse:collapse}
+ul.pureCssMenu {
+  display:block;
+  zoom:1;
+  float: left;
+}
+ul.pureCssMenu ul{
+  width: 91.35000000000001px;
+}
+ul.pureCssMenu li{
+  display:block;
+  margin:2px 0px 0px 2px;
+  font-size:0px;
+}
+ul.pureCssMenu a:active, ul.pureCssMenu a:focus {
+  outline-style:none;
+}
+ul.pureCssMenu a, ul.pureCssMenu li.dis a:hover, ul.pureCssMenu li.sep a:hover {
+  display:block;
+  vertical-align:middle;
+  background-color:#FFFFFF;
+  border-width:0px;
+  border-color:#6655ff;
+  border-style:solid;
+  text-align:left;
+  text-decoration:none;
+  padding:4px;
+  font:12px Tahoma;
+  color: #000;
+  text-decoration:none;
+  cursor:default;
+}
+
+@media screen and (max-device-width: 500px){
+  ul.pureCssMenu a, ul.pureCssMenu li.dis a:hover, ul.pureCssMenu li.sep a:hover {
+    padding: 2px;
+  }
+}
+
+ul.pureCssMenu span{
+  overflow:hidden;
+}
+ul.pureCssMenu li {
+  float:left;
+}
+ul.pureCssMenu ul li {
+  float:none;
+}
+ul.pureCssMenu ul a {
+  text-align:left;
+  white-space:nowrap;
+}
+ul.pureCssMenu li.sep{
+  text-align:center;
+  padding:0px;
+  line-height:0;
+  height:100%;
+}
+ul.pureCssMenu li.sep span{
+  float:none;
+  padding-right:0;
+  width:5px;
+  height:16px;
+  display:inline-block;
+  background-color:#AAAAAA;
+  background-image:none;}
+ul.pureCssMenu ul li.sep span{
+  width:80%;
+  height:3px;
+}
+ul.pureCssMenu li:hover{
+  position:relative;
+}
+ul.pureCssMenu li:hover>a{
+  background-color:#66A1D2;
+  border-color:#665500;
+  border-style:solid;
+  font:12px Tahoma;
+  color: #FFFFFF;
+  text-decoration:none;
+}
+ul.pureCssMenu li a:hover{
+  position:relative;
+  background-color:#66A1D2;
+  border-color:#665500;
+  border-style:solid;
+  font:12px Tahoma;
+  color: #FFFFFF;
+  text-decoration:none;
+}
+ul.pureCssMenu li.dis a {
+  color: #AAAAAA !important;
+}
+ul.pureCssMenu img {
+  border: none;
+  float:left;
+  _float:none;
+  margin-right:4px;
+  width:16px;
+  height:16px;
+}
+ul.pureCssMenu ul img {
+  width:16px;
+  height:16px;
+}
+ul.pureCssMenu img.over{display:none}
+ul.pureCssMenu li.dis a:hover img.over{display:none !important}
+ul.pureCssMenu li.dis a:hover img.def {display:inline !important}
+ul.pureCssMenu li:hover > a img.def  {display:none}
+ul.pureCssMenu li:hover > a img.over {display:inline}
+ul.pureCssMenu a:hover img.over,ul.pureCssMenu a:hover ul img.def,ul.pureCssMenu a:hover a:hover img.over{display:inline}
+ul.pureCssMenu a:hover img.def,ul.pureCssMenu a:hover ul img.over,ul.pureCssMenu a:hover a:hover img.def{display:none}
+ul.pureCssMenu a:hover ul{display:block}
+ul.pureCssMenu span{
+  display:block;
+}
+ul.pureCssMenu li:hover>a>span{
+}
+ul.pureCssMenu a:hover span{
+}
+ul.pureCssMenu ul span,ul.pureCssMenu a:hover table span{
+}
+ul.pureCssMenu ul li:hover > a span{
+}
+ul.pureCssMenu table a:hover span{
 }
