--- a/layouts/default.html
+++ b/layouts/default.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title><%= @item[:title]%> - ArchLinuxVn - ArchLinux for Vietnamese</title>
     <link rel="stylesheet" type="text/css" href="/style.css" media="screen">
+    <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
   </head>
   <body>
     <div id="cssmenu">
