layout fix mirror domain (theslinux -> archlinuxvn)

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -38,7 +38,7 @@
         <li class="pureCssMenui"><a class="pureCssMenui" href="#"><span>Mirror</span><![if gt IE 6]></a><![endif]><!--[if lte IE 6]><table><tr><td><![endif]-->
         <ul class="pureCssMenum">
           <li class="pureCssMenui"><a class="pureCssMenui" href="http://archlinuxvn.tuxfamily.org<%= @item.identifier %>">Pháp</a></li>
-          <li class="pureCssMenui"><a class="pureCssMenui" href="http://theslinux.org<%= @item.identifier %>">Singpore</a></li>
+          <li class="pureCssMenui"><a class="pureCssMenui" href="http://archlinuxvn.org<%= @item.identifier %>">Singapore</a></li>
         </ul>
         <!--[if lte IE 6]></td></tr></table></a><![endif]--></li>
       </ul>
