--- a/layouts/default.html
+++ b/layouts/default.html
@@ -19,7 +19,7 @@
           <li class="pureCssMenui"><a class="pureCssMenui" href="#">blog »</a></li>
           <li class="pureCssMenui"><a class="pureCssMenui" href="/~huy/">&nbsp; » Huy</a></li>
           <li class="pureCssMenui"><a class="pureCssMenui" href="/~n0b0dy/">&nbsp; » Sang</a></li>
-          <li class="pureCssMenui"><a class="pureCssMenui" href="/~redlotus//">&nbsp; » Doan</a></li>
+          <li class="pureCssMenui"><a class="pureCssMenui" href="/~redlotus/">&nbsp; » Doan</a></li>
         </ul>
         <!--[if lte IE 6]></td></tr></table></a><![endif]--></li>
         <li class="pureCssMenui"><a class="pureCssMenui" href="#"><span>Kết nối</span><![if gt IE 6]></a><![endif]><!--[if lte IE 6]><table><tr><td><![endif]-->
