layouts: + link to #facebook group

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -27,7 +27,8 @@
           <li class="pureCssMenui"><a class="pureCssMenui" href="/vn/irc/">Kênh IRC</a></li>
           <li class="pureCssMenui"><a class="pureCssMenui" href="/vn/skype/">Nhóm Skype</a></li>
           <li class="pureCssMenui"><a class="pureCssMenui" href="https://twitter.com/archlinuxvn">Twitter</a></li>
-          <li class="pureCssMenui"><a class="pureCssMenui" href="https://facebook.com/archlinuxvn/">Facebook</a></li>
+          <li class="pureCssMenui"><a class="pureCssMenui" href="https://facebook.com/archlinuxvn/">Facebook FB</a></li>
+          <li class="pureCssMenui"><a class="pureCssMenui" href="https://facebook.com/groups/archlinuxvn/">Facebook Group</a></li>
         </ul>
         <!--[if lte IE 6]></td></tr></table></a><![endif]--></li>
         <li class="pureCssMenui"><a class="pureCssMenui" href="/security/">Security</a></li>
