--- a/layouts/default.html
+++ b/layouts/default.html
@@ -27,8 +27,9 @@
           <li class="pureCssMenui"><a class="pureCssMenui" href="/vn/irc/">Kênh IRC</a></li>
           <li class="pureCssMenui"><a class="pureCssMenui" href="/vn/skype/">Nhóm Skype</a></li>
           <li class="pureCssMenui"><a class="pureCssMenui" href="https://twitter.com/archlinuxvn">Twitter</a></li>
-          <li class="pureCssMenui"><a class="pureCssMenui" href="https://facebook.com/archlinuxvn/">Facebook FB</a></li>
-          <li class="pureCssMenui"><a class="pureCssMenui" href="https://facebook.com/groups/archlinuxvn/">Facebook Group</a></li>
+          <li class="pureCssMenui"><a class="pureCssMenui" href="/vn/facebook/">Facebook</a></li>
+          <li class="pureCssMenui"><a class="pureCssMenui" href="https://facebook.com/groups/archlinuxvn/">&nbsp; » Group</a></li>
+          <li class="pureCssMenui"><a class="pureCssMenui" href="https://facebook.com/archlinuxvn/">&nbsp; » Fanpage</a></li>
         </ul>
         <!--[if lte IE 6]></td></tr></table></a><![endif]--></li>
         <li class="pureCssMenui"><a class="pureCssMenui" href="/security/">Security</a></li>
